attached_assets/Pasted--Configuring-done-0-0s-Generating-done-0-0s-12-Building-CXX-object-CMakeFiles-ai-lang-1743445574736.txt
-- Configuring done (0.0s)
-- Generating done (0.0s)
[ 12%] Building CXX object CMakeFiles/ai_language_lib.dir/src/RLInterpreter.cpp.o
[ 25%] Building CXX object CMakeFiles/ai_language_lib.dir/src/InterpreterFactory.cpp.o
In file included from /nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/std_thread.h:43,
                 from /nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/thread:45,
                 from /home/runner/workspace/ai_language/src/../include/BaseInterpreter.h:13,
                 from /home/runner/workspace/ai_language/src/../include/InterpreterFactory.h:5,
                 from /home/runner/workspace/ai_language/src/InterpreterFactory.cpp:2:
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h: In instantiation of ‘std::__detail::__unique_ptr_t<_Tp> std::make_unique(_Args&& ...) [with _Tp = ai_language::DLInterpreter; _Args = {}; __detail::__unique_ptr_t<_Tp> = __detail::__unique_ptr_t<ai_language::DLInterpreter>]’:
/home/runner/workspace/ai_language/src/InterpreterFactory.cpp:15:47:   required from here
/nix/store/14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0/include/c++/13.2.0/bits/unique_ptr.h:1070:30: error: invalid new-expression of abstract class type ‘ai_language::DLInterpreter’
 1070 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/runner/workspace/ai_language/src/InterpreterFactory.cpp:4:
/home/runner/workspace/ai_language/src/../include/DLInterpreter.h:18:7: note:   because the following virtual functions are pure within ‘ai_language::DLInterpreter’:
   18 | class DLInterpreter : public BaseInterpreter {
      |       ^~~~~~~~~~~~~
/home/runner/workspace/ai_language/src/../include/BaseInterpreter.h:68:18: note:     ‘virtual void ai_language::BaseInterpreter::handleHelpCommand()’
   68 |     virtual void handleHelpCommand() = 0;
      |                  ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/ai_language_lib.dir/build.make:132: CMakeFiles/ai_language_lib.dir/src/InterpreterFactory.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:86: CMakeFiles/ai_language_lib.dir/all] Error 2
make: *** [Makefile:91: all] Error 2